<?php
namespace Main\Exchange\DataProcessors;

use Main\Exchange\DataProcessors\Results\
    {
        MatcherResult,
        CombinerResult
    };

class Combiner
{
    public function setMatchedData(MatcherResult $data) : void
    {
        // TODO
    }

    public function process() : void
    {
        // TODO
    }

    public function getCombinedData() : CombinerResult
    {
        // TODO
    }
}