<?php
namespace Main\Exchange\DataProcessors;

use Main\Exchange\DataProcessors\Results\
    {
        CollectorResult,
        MatcherResult
    };

class Matcher extends AbstractProcessor
{
    public function setCollectedData(CollectorResult $data) : void
    {
        // TODO
    }

    public function process() : void
    {
        // TODO
    }

    public function getMatchedData() : MatcherResult
    {
        // TODO
    }
}