<?php
namespace Main\Exchange\DataProcessors;

use Main\Exchange\DataProcessors\Results\CombinerResult;

class Provider
{
    public function setCombinedData(CombinerResult $data) : void
    {
        // TODO
    }

    public function process() : void
    {
        // TODO
    }
}