<?php
namespace Main\Exchange\DataProcessors\Results;

interface Result
{

}